0.24 Monday 6th October, 2003
	when you specify an extra of C<{ follow => 1 }> File::Find stops
	populating $File::Find::topdir.  This leads to warnings noise so
	instead we now track $topdir ourselves.

0.23 Friday 3rd October, 2003
	make the extras hash work and add a proper test for it. (Doh!)

0.22 Friday 3rd October, 2003
	add in ->extras hash for passing things through to File::Find::find

0.21 Monday 15th September, 2003 
	pod glitch in File::Find::Rule::Procedural spotted and fixed
	by Tom Hukins

0.20 8th September, 2003
	- relative flag

	- Fix maxdepth? - this is undertested.

	- MANIFEST fixes (thanks to the cpan smokers)

	- split the documentation of the procedural interface out to
	  File::Find::Rule::Procedural, as people often seem to get
	  confused that the method calls don't take anonymous arrays
	  after seeing the procedural code that did

	- Chunky internal restructure.  Now we compile a match sub
	  from code fragments.  Though more complex, this is a big
	  speed win as it eliminates a lot of the subroutine dispatch.

	- During the restructure we lost the ->test method.  I hope
	  that it's not missed, since maintining it through a
	  deprecation cycle would be fiddly with the current _compile code.

	- Split the findrule tests into their own file, and just skip
	  the tricky ones on Win32.

0.11    29th July, 2003
        - Fix Win32 test failures (rt.cpan.org #3047)

0.10	10th March 2003
	- fixup an accidental warning in the stat-based tests.  Caught
	  by Alex Gough (rt.cpan.org #2138)
	- make the findrule tests more win32 safe/shell independent (picked 
	  up by Philip Newton)
	- autogenerate READMEs from bits and pieces

0.09	21st January 2003
	- Fix to the stat-based tests (spotted by Randal L. Schwartz)
	- implemented our own import sub so we can bootstrap
	  extensions more easily
	- added some documentation about using extensions.

0.08	28th October, 2002
	- ->not_* and implicit s#^\./## (based on suggestions by Tony
	  Bowden)