@@ -1,3 +1,7 @@
+HEAD
+	applied a patch from Leon Brocard to make the tests ignore CVS dirs
+	as well as .svn dirs.
+
 0.24 Monday 6th October, 2003
 	when you specify an extra of C<{ follow => 1 }> File::Find stops
 	populating $File::Find::topdir.  This leads to warnings noise so
